--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,25 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.asd</groupId>
-  <artifactId>asd</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <artifactId>Algorithms-Andreyuk</artifactId>
+  <version>0.1</version>
 
 
 
   <name>Archetype - asd</name>
   <url>http://maven.apache.org</url>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 </project>
